# Finder

./: .gitignore  Doc  README  README~  setupFinder.sh
Arduino/A-128_Arduno-to-COZIR/: AN128_arduino_cozir.txt
Arduino/A-128_Arduno-to-COZIR/AN128_ardunio_cozir/: AN128_ardunio_cozir.ino
Arduino/MLX90620_Example/: MLX90620_Example.ino
Arduino/MLX90620_SeriaDataGateway/: MLX90620_SeriaDataGateway.ino
Arduino/MPU6050_DMP6_SerialDataGateway/: MPU6050_DMP6_SerialDataGateway.ino
Arduino/dynamixel_comm_stellaris_arduino/: dynamixel_comm_stellaris_arduino.ino
Arduino/libraries/I2Cdev/: I2Cdev.cpp
Arduino/libraries/I2Cmaster/: twimaster.cpp
Arduino/libraries/MLX90620/: Readme.txt  i2cmaster.h  twimaster.cpp
Arduino/libraries/MPU6050/: MPU6050_6Axis_MotionApps20.h
Arduino/libraries/SimpleDynamixel/: SimpleDynamixel.h
Arduino/mpu_6050_SerialDataGateway/: mpu_6050_SerialDataGateway.ino
Arduino/prueba_sensor_CO2/: prueba_sensor_CO2.ino
Arduino/read_autocalibration_settings_co2/: read_autocalibration_settings_co2.ino
Arduino/serial_gateway_arduino_uno/: serial_gateway_arduino_uno.ino
Arduino/simple_analog_reader/: simple_analog_reader.ino
Energia/A-128_Arduno-to-COZIR/AN128_ardunio_cozir/: AN128_ardunio_cozir.ino
Energia/MPU6050_calibration/: MPU6050_calibration.ino
Energia/Messenger/: Messenger.cpp
Energia/brazo_launchpad_digital/: brazo_launchpad_digital.ino
Energia/brazo_launchpad_digital_endstop/: brazo_launchpad_digital_endstop.ino
Energia/brazo_launchpad_digital_endstop_ruitnas/: brazo_launchpad_digital_endstop_ruitnas.ino
Energia/encoder_digital/: encoder_digital.ino
Energia/encoder_digital_rutina/: encoder_digital_rutina.ino
Energia/encoder_digital_rutina_error_msg/: encoder_digital_rutina_error_msg.ino
Energia/encoders.ino/: encoders.ino.ino
Energia/encoders_prueba_ros/: encoders_prueba_ros.ino
Energia/libraries/: DynamixelSerial.h  OSMC.cpp
Energia/libraries/AS5043/: AS5043.cpp~  AS5043.h
Energia/libraries/DynamixelSerial/: DynamixelSerial.cpp
Energia/libraries/Encoder/: Encoder.cpp  Encoder.cpp~  Encoder.h~
Energia/libraries/MPU6050/: MPU6050.cpp
Energia/libraries/OSMC/: OSMC.h
Energia/libraries/SimpleDynamixel/: SimpleDynamixel.cpp
Energia/libraries/SimpleServo/: SimpleServo.cpp  SimpleServo.cpp~  SimpleServo.h  SimpleServo.h~
Energia/libraries/Talon/: Talon.cpp  Talon.cpp~  Talon.h
Energia/prueba_co2_v2/: prueba_co2_v2.ino
Energia/prueba_roboclaw/: prueba_roboclaw.ino
Energia/prueba_roboclaw_ros/: prueba_roboclaw_ros.ino
Energia/prueba_roboclaw_ros_1tarjeta/: prueba_roboclaw_ros_1tarjeta.ino
Energia/prueba_roboclaw_serialnode/: prueba_roboclaw_serialnode.ino
Energia/serial_gateway_arduino_uno/: serial_gateway_arduino_uno.ino
Energia/serial_gateway_tiva_c/: serial_gateway_tiva_c.ino
Energia/serial_gateway_tiva_c_vfinal/: serial_gateway_tiva_c_vfinal.ino
Energia/traccion_stellaris/: traccion_stellaris.ino
Energia/traccion_stellaris_digital/: traccion_stellaris_digital.ino
Energia/traccion_stellaris_digital_endstop/: traccion_stellaris_digital_endstop.ino
Energia/traccion_stellaris_digital_endstop_rutinas/: traccion_stellaris_digital_endstop_rutinas.ino
Energia/traccion_stellaris_digital_noroboclaw/: traccion_stellaris_digital_noroboclaw.ino
catkin_et/devel/: .catkin  .rosinstall  setup.sh  setup.sh~
catkin_et/src/audio_oper/: CMakeLists.txt  package.xml
catkin_et/src/audio_oper/src/: audio_capture_oper.cpp  audio_oper_play.cpp
catkin_et/src/audio_robot/: CMakeLists.txt  package.xml
catkin_et/src/audio_robot/src/: audio_capture_robot.cpp  audio_robot_play.cpp
catkin_et/src/bring_up/: CMakeLists.txt  package.xml
catkin_et/src/c_pattern_detector/: CMakeLists.txt  package.xml
catkin_et/src/config_files/: CMakeLists.txt  package.xml  urdf.rviz
catkin_et/src/finder_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
catkin_et/src/finder_description/: CMakeLists.txt  package.xml  urdf.rviz
catkin_et/src/labels_hazmate_detector/: CMakeLists.txt
catkin_et/src/movement_detector/: CMakeLists.txt
catkin_et/src/my_dynamixel_tutorial/: CMakeLists.txt  package.xml
catkin_et/src/sensors_dynamixel/: CMakeLists.txt  package.xml
catkin_et/src/teleoperation/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_et/src/using_markers/: CMakeLists.txt  package.xml
catkin_et/src/video_web/: CMakeLists.txt  package.xml
catkin_et/src/video_web/src/: myCam1.cpp  myCam2.cpp  myCam3.cpp  myCam4.cpp  myCam5.cpp  my_publisher.cpp  my_publisher_2.cpp  my_subscriber.cpp  my_subscriber_2.cpp
catkin_et/src/vision/zbar_detector/: CMakeLists.txt  package.xml
catkin_et/src/vision/zbar_detector/src/: main.cpp
catkin_et/src/vision_admin/: CMakeLists.txt  package.xml
sketchbook/: README.txt
sketchbook/Encoder_rosserial/: Encoder_rosserial.ino
sketchbook/Encoder_rosserial_jointstate/: Encoder_rosserial_jointstate.ino
sketchbook/Encoderanalogico1motor/: Encoderanalogico1motor.ino
sketchbook/Position_1motortest/: Position_1motortest.ino
sketchbook/SpeedDistance_test/: SpeedDistance_test.ino
sketchbook/final_carrera/: final_carrera.ino
sketchbook/pruebas_roboclaw/: pruebas_roboclaw.ino
sketchbook/python_arduino/: python_arduino.ino
sketchbook/python_arduino_2/: python_arduino_2.ino
sketchbook/sketch_oct10a/: sketch_oct10a.ino
(+194 files in other folders)
